@@ -1,6 +1,7 @@
 
 Version 1.0.3
 
+    - Don't process the last line of a file if it doesn't have a newline
     - Tightend up error checking around file operations
     - Improved error message output from Nagios plugin
 
